reset visit value and fix responsive on mobile

--- a/responsive/phone_X.css
+++ b/responsive/phone_X.css
@@ -150,7 +150,7 @@
 
     .anime-wrapper {
         width: 95vw;
-        margin: 2vh auto;
+        margin: 3.4vh auto;
     }
 
     .anime-level {
